packages/jaeger-ui/src/components/common/CopyIcon.css
/*
Copyright (c) 2019 Uber Technologies, Inc.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

.CopyIcon,
.CopyIcon:hover {
  background-color: transparent;
  border: 1px solid inherit;
  color: inherit;
  height: 100%;
  overflow: hidden;
  padding: 1px;
  font-size: 13px;
  margin-left: 5px;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
}

.CopyIcon:focus {
  background-color: rgba(255, 255, 255, 0.25);
  color: inherit;
}

